<resources>
    <string name="app_name">FairmountBagelMobileApplicationProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="sidebar_home">Home</string>
    <string name="sidebar_login">Login</string>
    <string name="sidebar_back">Back</string>
    <string name="sidebar_manage_schedule">Manage Schedule</string>
    <string name="sidebar_manage_accounts">Manage Accounts</string>
    <string name="sidebar_notification">Notification</string>
    <string name="sidebar_edit_home">Edit Home Page</string>
    <string name="sidebar_post_home">Post to Home Page</string>
    <string name="sidebar_logout">Log Out</string>
    <string name="sidebar_profile">Profile</string>
    <string name="sidebar_request_schedule">Request Schedule</string>
    <string name="sidebar_scanning">Scanning</string>
    <string name="sidebar_schedule">Schedule</string>
</resources>